--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,8 @@
     android:theme="@style/AppTheme.Dark" >
     <activity
       android:name="net.whily.android.calendarlookup.SearchActivity"
-      android:label="@string/app_name" >
+      android:label="@string/app_name"
+      android:screenOrientation="portrait" >
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
